--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,202 @@
+absl-py==2.1.0
+aniposelib==0.4.3
+annotated-types==0.7.0
+anyio==4.6.2.post1
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==24.2.0
+audioread==3.0.1
+babel==2.16.0
+beautifulsoup4==4.12.3
+bleach==6.2.0
+blinker==1.8.2
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
+click==8.1.7
 colorama==0.4.6
+coloredlogs==15.0.1
+colorlog==6.9.0
+comm==0.2.2
+ConfigArgParse==1.7
 contourpy==1.3.0
 cycler==0.12.1
+Cython==3.0.11
+dash==2.18.2
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+debugpy==1.8.8
+decorator==4.4.2
+deffcode==0.2.5
+defusedxml==0.7.1
+exceptiongroup==1.2.2
+executing==2.1.0
+fake-bpy-module-latest==20241113
+fastjsonschema==2.20.0
+ffmpeg==1.4
 filelock==3.16.1
+Flask==3.0.3
+flatbuffers==24.3.25
 fonttools==4.54.1
+fqdn==1.5.1
 fsspec==2024.9.0
+h11==0.14.0
+httpcore==1.0.6
+httpx==0.27.2
+hub-sdk==0.0.15
+humanfriendly==10.0
 idna==3.10
+imageio==2.36.0
+imageio-ffmpeg==0.5.1
+importlib_metadata==8.5.0
+iniconfig==2.0.0
+ipdb==0.13.13
+ipykernel==6.23.1
+ipython==8.29.0
+ipywidgets==8.1.5
+isoduration==20.11.0
+itsdangerous==2.2.0
+jax==0.4.35
+jaxlib==0.4.35
+jedi==0.19.1
 Jinja2==3.1.4
+joblib==1.4.2
+json5==0.9.25
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.3.0
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.13
 kiwisolver==1.4.7
+lazy_loader==0.4
+librosa==0.10.1
+libsass==0.21.0
+liftpose==0.22
+llvmlite==0.43.0
+markdown-it-py==3.0.0
 MarkupSafe==3.0.1
-matplotlib==3.9.2
+matplotlib==3.8.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mediapipe==0.10.14
+mistune==3.0.2
+ml_dtypes==0.5.0
+moviepy==1.0.3
 mpmath==1.3.0
+msgpack==1.1.0
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
 networkx==3.3
-numpy==2.1.2
-opencv-python==4.10.0.84
-packaging==24.1
-pandas==2.2.3
-pillow==10.4.0
-psutil==6.0.0
+notebook_shim==0.2.4
+numba==0.60.0
+numpy==1.26.2
+onnx==1.17.0
+onnxruntime==1.20.0
+open3d==0.18.0
+opencv-contrib-python==4.8.1.78
+opt_einsum==3.4.0
+overrides==7.7.0
+packaging==23.2
+pandas==2.1.4
+pandocfilters==1.5.1
+parso==0.8.4
+Pillow==10.0.1
+platformdirs==4.3.6
+plotly==5.14.1
+pluggy==1.5.0
+pooch==1.8.2
+proglog==0.1.10
+progress==1.6
+prometheus_client==0.21.0
+prompt_toolkit==3.0.48
+protobuf==4.25.5
+psutil==5.9.6
+pure_eval==0.2.3
 py-cpuinfo==9.0.0
+pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
+Pygments==2.18.0
 pyparsing==3.1.4
+pyqtgraph==0.13.3
+pyreadline3==3.5.4
+PySide6==6.6.3.1
+PySide6_Addons==6.6.3.1
+PySide6_Essentials==6.6.3.1
+pytest==8.3.3
 python-dateutil==2.9.0.post0
+python-json-logger==2.0.7
 pytz==2024.2
+pywin32==308
+pywinpty==2.0.14
 PyYAML==6.0.2
+pyzmq==26.2.0
+QtPy==2.4.1
+referencing==0.35.1
 requests==2.32.3
-scipy==1.14.1
+retrying==1.3.4
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.7.0
+rpds-py==0.21.0
+scikit-learn==1.5.2
+scipy==1.11.4
 seaborn==0.13.2
+Send2Trash==1.8.3
+setproctitle==1.3.3
+shiboken6==6.6.3.1
 six==1.16.0
+skelly_synchronize==2024.7.1032
+skelly_viewer==2024.7.1023
+skellycam==2024.9.1094
+skellyforge==2024.8.1008
+skellytracker==2024.9.1019
+sniffio==1.3.1
+sounddevice==0.5.1
+soundfile==0.12.1
+soupsieve==2.6
+soxr==0.5.0.post1
+stack-data==0.6.3
 sympy==1.13.3
+tenacity==9.0.0
+terminado==0.18.1
+thop==0.1.1.post2209072238
+threadpoolctl==3.5.0
+tinycss2==1.4.0
+toml==0.10.2
+tomli==2.0.2
 torch==2.4.1
 torchaudio==2.4.1
+torchsummary==1.5.1
 torchvision==0.19.1
-tqdm==4.66.5
+tornado==6.4.1
+tqdm==4.66.1
+traitlets==5.14.3
+types-python-dateutil==2.9.0.20241003
 typing_extensions==4.12.2
 tzdata==2024.2
-ultralytics==8.3.9
+ultralytics==8.0.239
 ultralytics-thop==2.0.9
+uri-template==1.3.0
 urllib3==2.2.3
+wcwidth==0.2.13
+webcolors==24.8.0
+webencodings==0.5.1
+websocket-client==1.8.0
+Werkzeug==3.0.6
+widgetsnbextension==4.0.13
+zipp==3.20.2
